--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
+include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = \
 	library \
-	doc \
-	po
+	tools
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -23,16 +23,6 @@ dist-hook:
 	else \
 		echo A git clone is required to generate a ChangeLog >&2; \
 	fi
-
-if WITH_COVERAGE
-coverage:
-	mkdir -p tests/coverage
-	$(LCOV) --directory . --zerocounters
-	$(MAKE) check
-	$(LCOV) --directory . --capture --output-file tests/coverage.info
-	$(GENHTML) --output-directory tests/coverage tests/coverage.info
-	@echo "file://$(abs_top_builddir)/tests/coverage/index.html"
-endif
 
 if ENABLE_GTK_DOC
 upload-doc: all
