Discover realms and ldap urls

--- a/configure.ac
+++ b/configure.ac
@@ -79,11 +79,14 @@ AC_SUBST(KRB5_LIBS)
 # -------------------------------------------------------------------
 # LDAP
 
+LDAP_LIBS=""
+
 AC_CHECK_LIB(ldap, ldap_search)
 AC_CHECK_LIB(lber, ber_pvt_opt_on)
 AC_CHECK_HEADERS(ldap.h)
+AC_CHECK_LIB(resolv, res_query, LDAP_LIBS="-lresolv")
 
-LDAP_LIBS="-lldap -llber"
+LDAP_LIBS="$LDAP_LIBS -lldap -llber"
 LDAP_CFLAGS=""
 
 AC_SUBST(LDAP_LIBS)
