Use a private krb5.conf file
 * This helps us connect to the same server consistently.
 * Allows --domain-server argument to work properly.

https://bugs.freedesktop.org/show_bug.cgi?id=55487

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -3,6 +3,7 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/library \
+	-DKRB5_CONFIG=\""$(sysconfdir)/krb5.conf"\" \
 	$(NULL)
 
 sbin_PROGRAMS =  \
