build: Use the resolv.h header when checking for res_query
https://bugzilla.gnome.org/show_bug.cgi?id=60561

--- a/configure.ac
+++ b/configure.ac
@@ -88,13 +88,31 @@ if test "$ldap_invalid" = "yes"; then
 	AC_MSG_ERROR([Couldn't find OpenLDAP headers or libraries])
 fi
 
-LDAP_LIBS=""
-AC_CHECK_LIB(resolv, res_query, LDAP_LIBS="-lresolv")
-LDAP_LIBS="$LDAP_LIBS -lldap -llber"
-LDAP_CFLAGS=""
-
 AC_SUBST(LDAP_LIBS)
 AC_SUBST(LDAP_CFLAGS)
+
+# -------------------------------------------------------------------
+# resolv
+
+AC_MSG_CHECKING(for which library has res_query)
+for lib in "" "-lresolv"; do
+	saved_LIBS="$LIBS"
+	LIBS="$LIBS $lib"
+	AC_LINK_IFELSE([[
+	#include <resolv.h>
+	int main()
+	{
+		res_query (0, 0, 0, 0, 0);
+		return 0;
+	}
+	]],
+	[ AC_MSG_RESULT(${lib:-libc}); have_res_query="yes"; break; ],
+	[ LIBS="$saved_LIBS" ])
+done
+if test "$have_res_query" != "yes"; then
+	AC_MSG_RESULT(no)
+	AC_MSG_ERROR([Couldn't find the library for the res_query function])
+fi
 
 # --------------------------------------------------------------------
 # SASL
