Add generic sequence code
This can be used both as an array an and a sorted lookup table

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,4 +28,10 @@ upload-release: $(DIST_ARCHIVES)
 	gpg --detach-sign --local-user 'stef@thewalter.net' $(DIST_ARCHIVES)
 	scp $(DIST_ARCHIVES) $(DIST_ARCHIVES).sig anarchy.freedesktop.org:/srv/www.freedesktop.org/www/software/realmd/releases
 
+memcheck:
+	make -C library memcheck
+
+leakcheck:
+	make -C library leakcheck
+
 EXTRA_DIST = config.rpath
