Add support for creating/deleting groups
 * create-group command
 * delete-group command
 * Refactor a bit to use the same code for user/groups

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -12,9 +12,9 @@ sbin_PROGRAMS =  \
 
 adcli_SOURCES = \
 	computer.c \
+	entry.c \
 	info.c \
 	tools.c tools.h \
-	user.c \
 	$(NULL)
 
 adcli_LDADD = \
