Use ldap_init_fd to better support IP addresses
When using an IP address we need to connect to that address
but then use the host name discovered in the LDAP URL. OpenLDAP
doesn't make this easy to do so use the documented but not-in-headers
ldap_init_fd function.

--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,10 @@ if test "$ldap_invalid" = "yes"; then
 	AC_MSG_ERROR([Couldn't find OpenLDAP headers or libraries])
 fi
 
+AC_CHECK_LIB(ldap, ldap_init_fd, [true], [
+	AC_MSG_ERROR([Couldn't find ldap_init_fd function in libldap])
+])
+
 AC_SUBST(LDAP_LIBS)
 AC_SUBST(LDAP_CFLAGS)
 
